fix: rte - heading - text wrapping for data attribute

--- a/src/components/RichTextEditor/extensions/heading/index.css
+++ b/src/components/RichTextEditor/extensions/heading/index.css
@@ -1,3 +1,13 @@
-h-metachm {
-  display: inline;
+/* h1 {
+} */
+
+h2 {
+  font-size: 1.35rem;
+  font-weight: 500;
 }
+
+/* h3 {
+} */
+
+/* h4 {
+} */
